--- a/Komandro/index.html
+++ b/Komandro/index.html
@@ -72,21 +72,21 @@
               <a class="nav-link active" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">About us</a>
+              <a class="nav-link" href="pages/about.html">About us</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropbtn" href="#"
                 >Kelas
                 <i
                   class="fas fa-regular fa-caret-down"
-                  style="color: #81e360"
+                  style="color: #51d259"
                 ></i
               ></a>
               <div class="dropdown-content">
-                <a href="#kelas1">Web Dev</a>
-                <a href="#kelas2">Android Dev</a>
-                <a href="#kelas3">IoT</a>
-                <a href="#kelas3">UI/UX</a>
+                <a href="pages/web.html">Web Dev</a>
+                <a href="pages/android.html">Android Dev</a>
+                <a href="pages/iot.html">IoT</a>
+                <a href="pages/uiux.html">UI/UX</a>
               </div>
             </li>
             <li class="nav-item">
