--- a/Komandro/pages/about.html
+++ b/Komandro/pages/about.html
@@ -69,10 +69,10 @@
         >
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
+            <a class="nav-link" aria-current="page" href="/index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/pages/about.html">About us</a>
+            <a class="nav-link active" href="/pages/about.html">About us</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropbtn" href="#"
