--- a/Komandro/pages/iot.html
+++ b/Komandro/pages/iot.html
@@ -69,13 +69,13 @@
         >
         <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
+              <a class="nav-link" aria-current="page" href="/index.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/pages/about.html">About us</a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropbtn" href="#"
+              <a class="nav-link dropbtn active" href="#"
                 >Kelas
                 <i
                   class="fas fa-regular fa-caret-down"
