--- a/Komandro/pages/about.html
+++ b/Komandro/pages/about.html
@@ -176,6 +176,27 @@
         </p>
       </div>
     </div>
+
+    <div class="section_heading text-center mt-5">
+                    <h6>Our target</h6>
+                    <h3>Target dari komandro</h3>
+                    <div class="line"></div>
+                    <div class="heading-line mb-1"></div>
+                </div>
+    
+    <div class="col">
+      <div class="p-2 text-center d-flex align-items-center justify-content-center">
+        <p class="col-lg-12" id="vimi">
+          Awalnya, Komandro merupakan kelas tambahan yang di bentuk oleh
+          M.Octaviano Pratama Faculty CCIT-FTUI. Saat itu, beliau membuat
+          kelas tambahan tersebut untuk meningkatkan pendidikan khususnya
+          pengembangan android. Hingga saat ini, Komandro telah memiliki
+          empat bidang kelas untuk mahasiswa/i belajar dan berdiskusi
+          bersama, yaitu Android Development , Web Development, IoT
+          (Internet of Things) dan UI/UX Desain.
+        </p>
+      </div>
+    </div>
     <!--<div class="row pt-2 pb-2 mt-0 mb-3">
       <div class="col-md-6">
         <div class="p-3">
