--- a/Komandro/pages/about.html
+++ b/Komandro/pages/about.html
@@ -380,6 +380,7 @@
               <div class="col-xl-3 col-lg-6">
                 <div class="card card-stats mb-4 mb-xl-0">
                   <div class="card-body">
+                    <div class="position-absolute caosprsn"><img src="/images/stcrprsn1.png" alt=""></div>
                     <div class="row">
                       <div class="col">
                         <h5 class="card-title text-uppercase text-muted mb-0">Alumni</h5>
