--- a/Komandro/pages/about.html
+++ b/Komandro/pages/about.html
@@ -110,181 +110,124 @@
   </section>
   <!-- About End -->
 
+  <div class="container">
+    <div class="row text-center">
+      <h1 class="fw-bold">Sejarah Komandro</h1>
+      <div class="heading-line mb-1"></div>
+    </div>
+
+    <div class="col">
+      <div class="p-2 text-center d-flex align-items-center justify-content-center">
+        <p class="col-lg-12" id="vimi">
+          Awalnya, Komandro merupakan kelas tambahan yang di bentuk oleh
+          M.Octaviano Pratama Faculty CCIT-FTUI. Saat itu, beliau membuat
+          kelas tambahan tersebut untuk meningkatkan pendidikan khususnya
+          pengembangan android. Hingga saat ini, Komandro telah memiliki
+          empat bidang kelas untuk mahasiswa/i belajar dan berdiskusi
+          bersama, yaitu Android Development , Web Development, IoT
+          (Internet of Things) dan UI/UX Desain.
+        </p>
+      </div>
+    </div>
+  </div>
+
   <!-- //////////////////////////////////////////////////////////////////////////////////////////////
                          START SECTION 4 - THE SERVICES UWU
 ///////////////////////////////////////////////////////////////////////////////////////////////////-->
-  <section id="services" class="services mt-5">
-    <div class="container">
-      <div class="row text-center">
-        <h1 class="fw-bold">Sejarah Komandro</h1>
-        <div class="heading-line mb-1"></div>
-      </div>
 
-      <div class="col">
-        <div class="p-2 text-center d-flex align-items-center justify-content-center">
-          <p class="col-lg-12" id="vimi">
-            Awalnya, Komandro merupakan kelas tambahan yang di bentuk oleh
-            M.Octaviano Pratama Faculty CCIT-FTUI. Saat itu, beliau membuat
-            kelas tambahan tersebut untuk meningkatkan pendidikan khususnya
-            pengembangan android. Hingga saat ini, Komandro telah memiliki
-            empat bidang kelas untuk mahasiswa/i belajar dan berdiskusi
-            bersama, yaitu Android Development , Web Development, IoT
-            (Internet of Things) dan UI/UX Desain.
-          </p>
-        </div>
-      </div>
-
-      <div class="section_heading text-center mt-5">
-        <h6>Our target</h6>
-        <h3>Target dari komandro</h3>
-        <div class="line"></div>
-        <div class="heading-line mb-1"></div>
-      </div>
-
-      <div class="col">
-        <div class="p-2 text-center d-flex align-items-center justify-content-center">
-          <p class="col-lg-12" id="vimi">
-            Awalnya, Komandro merupakan kelas tambahan yang di bentuk oleh
-            M.Octaviano Pratama Faculty CCIT-FTUI. Saat itu, beliau membuat
-            kelas tambahan tersebut untuk meningkatkan pendidikan khususnya
-            pengembangan android. Hingga saat ini, Komandro telah memiliki
-            empat bidang kelas untuk mahasiswa/i belajar dan berdiskusi
-            bersama, yaitu Android Development , Web Development, IoT
-            (Internet of Things) dan UI/UX Desain.
-          </p>
-        </div>
-      </div>
-      <!--<div class="row pt-2 pb-2 mt-0 mb-3">
-      <div class="col-md-6">
-        <div class="p-3">
-          <h2 class="fw-bold text-capitalize text-center">Visi</h2>
-        </div>
-        <div class="p-4">
-          <p class="fw-bold text-capitalize text-center">
-            "Mewujudkan komunitas mahasiswa yang memiliki keunggulan dan
-            solidaritas tinggi yang aktif , solutif serta responsif guna
-            mengembangkan sinergitas anggota komandro"
-          </p>
-        </div>
-      </div>
-
-      <div class="col-md-6 border-left">
-        <div class="p-3">
-          <h2 class="fw-bold text-capitalize text-center">Misi</h2>
-        </div>
-        <div class="p-3 text-start">
-          <ol>
-            <li>
-              <p class="fw-bold">
-                Mampu meningkatkan solidaritas dan kebersamaan antar
-                internal komandro
-              </p>
-            </li>
-            <li>
-              <p class="fw-bold">
-                Meningkatkan kuantitas dan kualitas komandro agar lebih
-                unggul di bidang teknologi serta mampu membuat dan
-                melaksanakan program yang bermanfaat secara luas terfokus
-                pada teknologi
-              </p>
-            </li>
-            <li>
-              <p class="fw-bold">
-                Membangun dan mengkoordinasikan seluruh anggota komandro
-                dengan baik dan sesuai dengan aturan yang ada
-              </p>
-            </li>
-            <li>
-              <p class="fw-bold">
-                Wadah untuk menampung aspirasi serta memfasilitasi minat dan
-                bakat mahasiswa CCIT-FTUI
-              </p>
-            </li>
-            <li>
-              <p class="fw-bold">
-                Melaksanakan kegiatan mahasiswa yang aktif, inovatif dan
-                produktif agar dapat membangun prestasi bersama
-              </p>
-            </li>
-          </ol>
-        </div>
-      </div>
+  <section id="services" class="services">
+    <div style="background-image: url(); background-repeat: no-repeat; background-size: cover; height: 150px;">
     </div>
-  </div> -->
+    <div style="background-color: #51d259;">
+      <div class="container">
 
-      <!-- Facilities Start -->
-      <div class="container-fluid pt-5">
-        <div class="container pb-3">
-          <div class="row">
-            <div class="col-lg-4 col-md-6 pb-1">
-              <div class="d-flex bg-light shadow-sm border-top rounded mb-4" style="padding: 30px">
-                <!--icon di sini-->
-                <div class="pl-4">
-                  <h4>kobo kanaeru</h4>
-                  <p class="m-0">
-                    Kasd labore kasd et dolor est rebum dolor ut, clita dolor vero
-                    lorem amet elitr vero...
-                  </p>
+
+
+
+        <div class="section_heading text-center">
+          <h6>Our target</h6>
+          <h3>Target dari komandro</h3>
+          <div class="line"></div>
+          <div class="heading-line mb-1"></div>
+        </div>
+
+
+
+
+        <!-- Facilities Start -->
+        <div class="container-fluid pt-5">
+          <div class="container pb-3">
+            <div class="row">
+              <div class="col-lg-4 col-md-6 pb-1">
+                <div class="d-flex bg-light shadow-sm border-top rounded mb-4" style="padding: 30px">
+                  <!--icon di sini-->
+                  <div class="pl-4">
+                    <h4>kobo kanaeru</h4>
+                    <p class="m-0">
+                      Kasd labore kasd et dolor est rebum dolor ut, clita dolor vero
+                      lorem amet elitr vero...
+                    </p>
+                  </div>
                 </div>
               </div>
-            </div>
-            <div class="col-lg-4 col-md-6 pb-1">
-              <div class="d-flex bg-light shadow-sm border-top rounded mb-4" style="padding: 30px">
-                <!--icon di sini-->
-                <div class="pl-4">
-                  <h4>Lorem, ipsum dolor.</h4>
-                  <p class="m-0">
-                    Kasd labore kasd et dolor est rebum dolor ut, clita dolor vero
-                    lorem amet elitr vero...
-                  </p>
+              <div class="col-lg-4 col-md-6 pb-1">
+                <div class="d-flex bg-light shadow-sm border-top rounded mb-4" style="padding: 30px">
+                  <!--icon di sini-->
+                  <div class="pl-4">
+                    <h4>Lorem, ipsum dolor.</h4>
+                    <p class="m-0">
+                      Kasd labore kasd et dolor est rebum dolor ut, clita dolor vero
+                      lorem amet elitr vero...
+                    </p>
+                  </div>
                 </div>
               </div>
-            </div>
-            <div class="col-lg-4 col-md-6 pb-1">
-              <div class="d-flex bg-light shadow-sm border-top rounded mb-4" style="padding: 30px">
-                <!--icon di sini-->
-                <div class="pl-4">
-                  <h4>Lorem, ipsum dolor.</h4>
-                  <p class="m-0">
-                    Kasd labore kasd et dolor est rebum dolor ut, clita dolor vero
-                    lorem amet elitr vero...
-                  </p>
+              <div class="col-lg-4 col-md-6 pb-1">
+                <div class="d-flex bg-light shadow-sm border-top rounded mb-4" style="padding: 30px">
+                  <!--icon di sini-->
+                  <div class="pl-4">
+                    <h4>Lorem, ipsum dolor.</h4>
+                    <p class="m-0">
+                      Kasd labore kasd et dolor est rebum dolor ut, clita dolor vero
+                      lorem amet elitr vero...
+                    </p>
+                  </div>
                 </div>
               </div>
-            </div>
-            <div class="col-lg-4 col-md-6 pb-1">
-              <div class="d-flex bg-light shadow-sm border-top rounded mb-4" style="padding: 30px">
-                <!--icon di sini-->
-                <div class="pl-4">
-                  <h4>Lorem, ipsum.</h4>
-                  <p class="m-0">
-                    Kasd labore kasd et dolor est rebum dolor ut, clita dolor vero
-                    lorem amet elitr vero...
-                  </p>
+              <div class="col-lg-4 col-md-6 pb-1">
+                <div class="d-flex bg-light shadow-sm border-top rounded mb-4" style="padding: 30px">
+                  <!--icon di sini-->
+                  <div class="pl-4">
+                    <h4>Lorem, ipsum.</h4>
+                    <p class="m-0">
+                      Kasd labore kasd et dolor est rebum dolor ut, clita dolor vero
+                      lorem amet elitr vero...
+                    </p>
+                  </div>
                 </div>
               </div>
-            </div>
-            <div class="col-lg-4 col-md-6 pb-1">
-              <div class="d-flex bg-light shadow-sm border-top rounded mb-4" style="padding: 30px">
-                <!--icon di sini-->
-                <div class="pl-4">
-                  <h4>Lorem, ipsum dolor.</h4>
-                  <p class="m-0">
-                    Kasd labore kasd et dolor est rebum dolor ut, clita dolor vero
-                    lorem amet elitr vero...
-                  </p>
+              <div class="col-lg-4 col-md-6 pb-1">
+                <div class="d-flex bg-light shadow-sm border-top rounded mb-4" style="padding: 30px">
+                  <!--icon di sini-->
+                  <div class="pl-4">
+                    <h4>Lorem, ipsum dolor.</h4>
+                    <p class="m-0">
+                      Kasd labore kasd et dolor est rebum dolor ut, clita dolor vero
+                      lorem amet elitr vero...
+                    </p>
+                  </div>
                 </div>
               </div>
-            </div>
-            <div class="col-lg-4 col-md-6 pb-1">
-              <div class="d-flex bg-light shadow-sm border-top rounded mb-4" style="padding: 30px">
-                <!--icon di sini-->
-                <div class="pl-4">
-                  <h4>Lorem, ipsum.</h4>
-                  <p class="m-0">
-                    Kasd labore kasd et dolor est rebum dolor ut, clita dolor vero
-                    lorem amet elitr vero...
-                  </p>
+              <div class="col-lg-4 col-md-6 pb-1">
+                <div class="d-flex bg-light shadow-sm border-top rounded mb-4" style="padding: 30px">
+                  <!--icon di sini-->
+                  <div class="pl-4">
+                    <h4>Lorem, ipsum.</h4>
+                    <p class="m-0">
+                      Kasd labore kasd et dolor est rebum dolor ut, clita dolor vero
+                      lorem amet elitr vero...
+                    </p>
+                  </div>
                 </div>
               </div>
             </div>
@@ -301,6 +244,9 @@
   </section>
 
   <section class="mb-4">
+    <div
+      style="background-image: url(); background-repeat: no-repeat; background-size: cover; background-position: -50%; height: 150px;">
+    </div>
     <div class="main-content">
       <div class="header bg-gradient-primary pb-3 pt-3 pt-md-4 d-flex justify-content-center">
         <div class="container-fluid">
@@ -379,8 +325,8 @@
           <div class="col-12 col-sm-8 col-lg-6">
             <!-- Section Heading-->
             <div class="section_heading text-center">
-              <h6>Our Projects History</h6>
-              <h3>Project yang di buat dari tahun ke tahun</h3>
+              <h6>Our History</h6>
+              <h3>Timeline dari perjalanan komandro</h3>
               <div class="line"></div>
               <div class="heading-line mb-1"></div>
             </div>
@@ -506,110 +452,7 @@
   </section>
 
 
-  <!-- Team Start -->
-  <div class="container-fluid pt-5">
-    <div class="container">
-      <div class="text-center pb-2">
-        <p class="section-title px-5">
-          <span class="px-2">Our Lead</span>
-        </p>
-        <h1 class="mb-4">Ketua divisi komandro</h1>
-      </div>
-      <div class="row">
-        <div class="col-md-6 col-lg-2 text-center team mb-5">
-          <div class="position-relative overflow-hidden mb-4" style="border-radius: 100%">
-            <img class="img-fluid w-100" src="https://placehold.co/100x100/png" alt="" />
-            <div class="team-social d-flex align-items-center justify-content-center w-100 h-100 position-absolute">
-              <a class="btn btn-outline-light text-center mr-2 px-0" style="width: 38px; height: 38px" href="#"><i
-                  class="fab fa-twitter"></i></a>
-              <a class="btn btn-outline-light text-center mr-2 px-0" style="width: 38px; height: 38px" href="#"><i
-                  class="fab fa-facebook-f"></i></a>
-              <a class="btn btn-outline-light text-center px-0" style="width: 38px; height: 38px" href="#"><i
-                  class="fab fa-linkedin-in"></i></a>
-            </div>
-          </div>
-          <h4>Julia Smith</h4>
-          <i>prof gamer</i>
-        </div>
-        <div class="col-md-6 col-lg-2 text-center team mb-5">
-          <div class="position-relative overflow-hidden mb-4" style="border-radius: 100%">
-            <img class="img-fluid w-100" src="https://placehold.co/100x100/png" alt="" />
-            <div class="team-social d-flex align-items-center justify-content-center w-100 h-100 position-absolute">
-              <a class="btn btn-outline-light text-center mr-2 px-0" style="width: 38px; height: 38px" href="#"><i
-                  class="fab fa-twitter"></i></a>
-              <a class="btn btn-outline-light text-center mr-2 px-0" style="width: 38px; height: 38px" href="#"><i
-                  class="fab fa-facebook-f"></i></a>
-              <a class="btn btn-outline-light text-center px-0" style="width: 38px; height: 38px" href="#"><i
-                  class="fab fa-linkedin-in"></i></a>
-            </div>
-          </div>
-          <h4>Jhon Doe</h4>
-          <i>prof roast</i>
-        </div>
-        <div class="col-md-6 col-lg-2 text-center team mb-5">
-          <div class="position-relative overflow-hidden mb-4" style="border-radius: 100%">
-            <img class="img-fluid w-100" src="https://placehold.co/100x100/png" alt="" />
-            <div class="team-social d-flex align-items-center justify-content-center w-100 h-100 position-absolute">
-              <a class="btn btn-outline-light text-center mr-2 px-0" style="width: 38px; height: 38px" href="#"><i
-                  class="fab fa-twitter"></i></a>
-              <a class="btn btn-outline-light text-center mr-2 px-0" style="width: 38px; height: 38px" href="#"><i
-                  class="fab fa-facebook-f"></i></a>
-              <a class="btn btn-outline-light text-center px-0" style="width: 38px; height: 38px" href="#"><i
-                  class="fab fa-linkedin-in"></i></a>
-            </div>
-          </div>
-          <h4>Mollie Ross</h4>
-          <i>prof crit</i>
-        </div>
-        <div class="col-md-6 col-lg-2 text-center team mb-5">
-          <div class="position-relative overflow-hidden mb-4" style="border-radius: 100%">
-            <img class="img-fluid w-100" src="https://placehold.co/100x100/png" alt="" />
-            <div class="team-social d-flex align-items-center justify-content-center w-100 h-100 position-absolute">
-              <a class="btn btn-outline-light text-center mr-2 px-0" style="width: 38px; height: 38px" href="#"><i
-                  class="fab fa-twitter"></i></a>
-              <a class="btn btn-outline-light text-center mr-2 px-0" style="width: 38px; height: 38px" href="#"><i
-                  class="fab fa-facebook-f"></i></a>
-              <a class="btn btn-outline-light text-center px-0" style="width: 38px; height: 38px" href="#"><i
-                  class="fab fa-linkedin-in"></i></a>
-            </div>
-          </div>
-          <h4>Donald John</h4>
-          <i>idk</i>
-        </div>
-        <div class="col-md-6 col-lg-2 text-center team mb-5">
-          <div class="position-relative overflow-hidden mb-4" style="border-radius: 100%">
-            <img class="img-fluid w-100" src="https://placehold.co/100x100/png" alt="" />
-            <div class="team-social d-flex align-items-center justify-content-center w-100 h-100 position-absolute">
-              <a class="btn btn-outline-light text-center mr-2 px-0" style="width: 38px; height: 38px" href="#"><i
-                  class="fab fa-twitter"></i></a>
-              <a class="btn btn-outline-light text-center mr-2 px-0" style="width: 38px; height: 38px" href="#"><i
-                  class="fab fa-facebook-f"></i></a>
-              <a class="btn btn-outline-light text-center px-0" style="width: 38px; height: 38px" href="#"><i
-                  class="fab fa-linkedin-in"></i></a>
-            </div>
-          </div>
-          <h4>Donald John</h4>
-          <i>idk</i>
-        </div>
-        <div class="col-md-6 col-lg-2 text-center team mb-5">
-          <div class="position-relative overflow-hidden mb-4" style="border-radius: 100%">
-            <img class="img-fluid w-100" src="https://placehold.co/100x100/png" alt="" />
-            <div class="team-social d-flex align-items-center justify-content-center w-100 h-100 position-absolute">
-              <a class="btn btn-outline-light text-center mr-2 px-0" style="width: 38px; height: 38px" href="#"><i
-                  class="fab fa-twitter"></i></a>
-              <a class="btn btn-outline-light text-center mr-2 px-0" style="width: 38px; height: 38px" href="#"><i
-                  class="fab fa-facebook-f"></i></a>
-              <a class="btn btn-outline-light text-center px-0" style="width: 38px; height: 38px" href="#"><i
-                  class="fab fa-linkedin-in"></i></a>
-            </div>
-          </div>
-          <h4>Donald John</h4>
-          <i>idk</i>
-        </div>
-      </div>
-    </div>
-  </div>
-  <!-- Team End -->
+
 
   <!-- ///////////////////////////////////////////////////////////////////////////////////////////////////
                               START SECTION 6 - THE SOCIAL MEDIA UWU
