--- a/Komandro/pages/about.html
+++ b/Komandro/pages/about.html
@@ -136,24 +136,16 @@
 ///////////////////////////////////////////////////////////////////////////////////////////////////-->
 
   <section id="services" class="services">
-    <div style="background-image: url(); background-repeat: no-repeat; background-size: cover; height: 150px;">
+    <div style="background-color: #e1ede1; height: 20px;">
     </div>
-    <div style="background-color: #51d259;">
+    <div style="background-color: #e1ede1;">
       <div class="container">
-
-
-
-
         <div class="section_heading text-center">
           <h6>Our target</h6>
           <h3>Target dari komandro</h3>
           <div class="line"></div>
           <div class="heading-line mb-1"></div>
         </div>
-
-
-
-
         <!-- Facilities Start -->
         <div class="container-fluid pt-5">
           <div class="container pb-3">
@@ -234,18 +226,11 @@
           </div>
         </div>
       </div>
-
-
-
       <!-- Facilities Start -->
-
-
-
   </section>
 
   <section class="mb-4">
-    <div
-      style="background-image: url(); background-repeat: no-repeat; background-size: cover; background-position: -50%; height: 150px;">
+    <div style="background-color: #e1ede1; height: 20px;">
     </div>
     <div class="main-content">
       <div class="header bg-gradient-primary pb-3 pt-3 pt-md-4 d-flex justify-content-center">
