--- a/Komandro/pages/about.html
+++ b/Komandro/pages/about.html
@@ -12,6 +12,9 @@
   <script src="https://cdn.jsdelivr.net/gh/mcstudios/glightbox/dist/js/glightbox.min.js"></script>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap"
     rel="stylesheet" />
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="/style.css" />
   <link rel="apple-touch-icon" sizes="180x180" href="/ioc/apple-touch-icon.png" />
   <link rel="icon" type="image/png" sizes="32x32" href="/ioc/favicon-32x32.png" />
@@ -72,20 +75,26 @@
   <!-- /////////////////////////////////////////////////////////////////////////////////////////////////
                             START SECTION 2 - THE INTRO SECTION STARTO
 /////////////////////////////////////////////////////////////////////////////////////////////////////-->
-
+  <!--
   <section id="home" class="intro-section">
+    
     <div class="container">
       <div class="row align-items-center text-white">
-        <!-- START THE CONTENT FOR THE INTRO  -->
+        START THE CONTENT FOR THE INTRO 
         <h1 class="fw-bold text-center display-2 lh-sm">ᴀʙᴏᴜᴛ ᴜꜱ</h1>
         <p class="fw-light text-center fs-5">pages > about</p>
       </div>
     </div>
-    <!--<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" id="parallax-svg"><path fill="#f3fcf3" fill-opacity="1" d="M0,160L48,176C96,192,192,224,288,208C384,192,480,128,576,133.3C672,139,768,213,864,202.7C960,192,1056,96,1152,74.7C1248,53,1344,107,1392,133.3L1440,160L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>-->
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" id="parallax-svg"><path fill="#f3fcf3" fill-opacity="1" d="M0,160L48,176C96,192,192,224,288,208C384,192,480,128,576,133.3C672,139,768,213,864,202.7C960,192,1056,96,1152,74.7C1248,53,1344,107,1392,133.3L1440,160L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
     <img src="/images/layered-waves-haikei (1).svg" alt="wave" style="width: 100%" id="about" />
-  </section>
+    
 
-  <section>
+
+  </section>
+  -->
+
+
+  <section style="margin-top: 5rem;">
     <!-- About Start -->
     <div class="container-fluid py-5">
       <div class="container">
@@ -107,29 +116,96 @@
           </div>
         </div>
       </div>
+
+      <div class="container mb-2 mt-5">
+        <div class="row text-center">
+          <h1 class="fw-bold">Sejarah Komandro</h1>
+          <div class="heading-line mb-1"></div>
+        </div>
+
+        <div class="col">
+          <div class="p-2 text-center d-flex align-items-center justify-content-center">
+            <p class="col-lg-12" id="vimi">
+              Awalnya, Komandro merupakan kelas tambahan yang di bentuk oleh
+              M.Octaviano Pratama Faculty CCIT-FTUI. Saat itu, beliau membuat
+              kelas tambahan tersebut untuk meningkatkan pendidikan khususnya
+              pengembangan android. Hingga saat ini, Komandro telah memiliki
+              empat bidang kelas untuk mahasiswa/i belajar dan berdiskusi
+              bersama, yaitu Android Development , Web Development, IoT
+              (Internet of Things) dan UI/UX Desain.
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <div class="container-xl mt-3 mb-4 smgone">
+        <div class="row"">
+          <div class=" col-md-12 mx-auto">
+          <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="0">
+            <!-- Carousel indicators -->
+            <ol class="carousel-indicators">
+              <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+              <li data-target="#myCarousel" data-slide-to="1"></li>
+              <li data-target="#myCarousel" data-slide-to="2"></li>
+            </ol>
+            <!-- Wrapper for carousel items -->
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <div class="row">
+                  <div class="col-sm-4">
+                    <div class="img-box"><img src="https://placehold.co/600x400/png" class="img-fluid" alt=""></div>
+                  </div>
+                  <div class="col-sm-4">
+                    <div class="img-box"><img src="https://placehold.co/600x400/png" class="img-fluid" alt=""></div>
+                  </div>
+                  <div class="col-sm-4">
+                    <div class="img-box"><img src="https://placehold.co/600x400/png" class="img-fluid" alt=""></div>
+                  </div>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div class="row">
+                  <div class="col-sm-4">
+                    <div class="img-box"><img src="https://placehold.co/600x400/png" class="img-fluid" alt=""></div>
+                  </div>
+                  <div class="col-sm-4">
+                    <div class="img-box"><img src="https://placehold.co/600x400/png" class="img-fluid" alt=""></div>
+                  </div>
+                  <div class="col-sm-4">
+                    <div class="img-box"><img src="https://placehold.co/600x400/png" class="img-fluid" alt=""></div>
+                  </div>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div class="row">
+                  <div class="col-sm-4">
+                    <div class="img-box"><img src="https://placehold.co/600x400/png" class="img-fluid" alt=""></div>
+                  </div>
+                  <div class="col-sm-4">
+                    <div class="img-box"><img src="https://placehold.co/600x400/png" class="img-fluid" alt=""></div>
+                  </div>
+                  <div class="col-sm-4">
+                    <div class="img-box"><img src="https://placehold.co/600x400/png" class="img-fluid" alt=""></div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- Carousel controls -->
+            <a class="carousel-control-prev" href="#myCarousel" data-slide="prev">
+              <i class="fa fa-chevron-left"></i>
+            </a>
+            <a class="carousel-control-next" href="#myCarousel" data-slide="next">
+              <i class="fa fa-chevron-right"></i>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+
   </section>
   <!-- About End -->
 
-  <div class="container">
-    <div class="row text-center">
-      <h1 class="fw-bold">Sejarah Komandro</h1>
-      <div class="heading-line mb-1"></div>
-    </div>
 
-    <div class="col">
-      <div class="p-2 text-center d-flex align-items-center justify-content-center">
-        <p class="col-lg-12" id="vimi">
-          Awalnya, Komandro merupakan kelas tambahan yang di bentuk oleh
-          M.Octaviano Pratama Faculty CCIT-FTUI. Saat itu, beliau membuat
-          kelas tambahan tersebut untuk meningkatkan pendidikan khususnya
-          pengembangan android. Hingga saat ini, Komandro telah memiliki
-          empat bidang kelas untuk mahasiswa/i belajar dan berdiskusi
-          bersama, yaitu Android Development , Web Development, IoT
-          (Internet of Things) dan UI/UX Desain.
-        </p>
-      </div>
-    </div>
-  </div>
 
   <!-- //////////////////////////////////////////////////////////////////////////////////////////////
                          START SECTION 4 - THE SERVICES UWU
@@ -442,7 +518,7 @@
   <!-- ///////////////////////////////////////////////////////////////////////////////////////////////////
                               START SECTION 6 - THE SOCIAL MEDIA UWU
 //////////////////////////////////////////////////////////////////////////////////////////////////////-->
-
+  <!--
   <section id="sosmed" class="portfolio">
     <div class="container">
       <div class="row text-center">
@@ -613,6 +689,169 @@
       </div>
     </div>
   </section>
+  -->
+  <!-- /////////////////////////////////////////////////////////////////////////////////////////////////
+                       START SECTION 5 - THE FAQ FAQU
+//////////////////////////////////////////////////////////////////////////////////////////////////////-->
+  <section id="faq" class="faq">
+    <div class="container">
+      <div class="row text-center">
+        <h1 class="display-3 fw-bold text-uppercase">faq</h1>
+        <div class="heading-line"></div>
+        <p class="lead">Pertanyaan yang sering di tanyakan untuk Komandro</p>
+      </div>
+      <!-- ACCORDION CONTENT  -->
+      <div class="row mt-5">
+        <div class="col-md-12">
+          <div class="accordion" id="accordionExample">
+            <!-- ACCORDION ITEM 1 -->
+            <div class="accordion-item shadow mb-3">
+              <h2 class="accordion-header" id="headingOne">
+                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
+                  aria-expanded="true" aria-controls="collapseOne">
+                  Apa itu Komandro?
+                </button>
+              </h2>
+              <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
+                data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                  Komandro, singkatan dari Komunitas Android, merupakan Unit
+                  Kegiatan Mahasiswa (UKM) di bawah naungan CCIT FTUI.
+                  Komunitas ini didedikasikan untuk pembelajaran dan
+                  kontribusi bersama di bidang Teknologi Informasi. Tujuan
+                  utama Komandro adalah meningkatkan pendidikan di bidang
+                  teknologi informasi dan kemampuan berorganisasi, serta
+                  memberikan fasilitas dan dorongan kepada generasi muda CCIT
+                  FTUI untuk mengembangkan potensi mereka.
+                </div>
+              </div>
+            </div>
+            <!-- ACCORDION ITEM 2 -->
+            <div class="accordion-item shadow mb-3">
+              <h2 class="accordion-header" id="headingTwo">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                  data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                  Apa saja kegiatan di Komandro?
+                </button>
+              </h2>
+              <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+                data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                  <ol>
+                    <li>
+                      Kelas belajar atau BootCamp Komandro, di mana mahasiswa
+                      aktif CCIT FTUI berdiskusi dan belajar di luar kelas
+                      untuk mempersiapkan proyek dan perlombaan.
+                    </li>
+                    <li>
+                      Webinar untuk berbagi pengalaman dan pengetahuan terkait
+                      perlombaan dan dunia kerja.
+                    </li>
+                    <li>
+                      Company Visit, kegiatan eksternal kunjungan ke
+                      perusahaan ternama di Indonesia untuk observasi dan
+                      pengalaman praktikal di dunia kerja Teknologi Informasi.
+                    </li>
+                  </ol>
+                </div>
+              </div>
+            </div>
+            <!-- ACCORDION ITEM 3 -->
+            <div class="accordion-item shadow mb-3">
+              <h2 class="accordion-header" id="headingThree">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                  data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                  Apa saja benefit dari Komandro?
+                </button>
+              </h2>
+              <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
+                data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                  <ol>
+                    <li>
+                      Peningkatan pengetahuan teknologi, materi kuliah, dan
+                      dunia kerja.
+                    </li>
+                    <li>
+                      Pengalaman dalam kerja tim, perlombaan, dan dunia kerja.
+                    </li>
+                    <li>
+                      Jaringan dengan alumni dan anggota komunitas IT di CCIT
+                      FTUI.
+                    </li>
+                    <li>
+                      Pengembangan soft skill dan hard skill dalam organisasi
+                      dan teknologi informasi.
+                    </li>
+                    <li>Peningkatan portofolio.</li>
+                    <li>E-Sertifikat.</li>
+                  </ol>
+                </div>
+              </div>
+            </div>
+            <!-- ACCORDION ITEM 4 -->
+            <div class="accordion-item shadow mb-3">
+              <h2 class="accordion-header" id="headingFour">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                  data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                  Fasilitas apa saja yang ada di Komandro?
+                </button>
+              </h2>
+              <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour"
+                data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                  Komandro memiliki anggota, alumni, dan pengajar yang
+                  friendly dan berpengalaman, serta ruangan yang mendukung
+                  berjalannya kegiatan.
+                </div>
+              </div>
+            </div>
+            <!-- ACCORDION ITEM 5 -->
+            <div class="accordion-item shadow mb-3">
+              <h2 class="accordion-header" id="headingFive">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                  data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFour">
+                  Sudah sejauh mana relasi di Komandro?
+                </button>
+              </h2>
+              <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive"
+                data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                  Relasi Komandro berkembang dengan baik. Ada peningkatan
+                  dalam jaringan dan kemitraan dengan berbagai pihak, termasuk
+                  alumni, dosen, perusahaan ternama dan pihak-pihak lain yang
+                  memiliki kepentingan serupa atau mendukung visi dan misi
+                  Komandro. Dalam beberapa bulan terakhir, Komandro telah
+                  menjalin beberapa kerjasama dengan UKM eksternal dan alumni
+                  untuk mengadakan collab bersama. Ini membantu memperluas
+                  pengaruh dan dampak positif yang dapat diberikan oleh
+                  Komandro dalam komunitas akademis. Selain itu, hubungan
+                  dengan komunitas lokal terus diperkuat melalui berbagai
+                  kegiatan sosial dan pelayanan masyarakat, seperti berbagi
+                  makanan, amal atau sedekah, dan program-program lain yang
+                  dirancang untuk memberikan kontribusi positif kepada
+                  masyarakat sekitar. Dalam hal rekrutmen anggota dan
+                  partisipasi dalam kegiatan Komandro, terdapat pertumbuhan
+                  yang baik. seluruh staf komandro bergabung dan memberikan
+                  kontribusi dalam berbagai divisi dan proyek yang dijalankan
+                  oleh komandro. <br />
+                  <br />
+                  Pentingnya menjaga dan mengembangkan relasi ini diakui, dan
+                  Komandro terus bekerja untuk memperluas jaringan kerjasama
+                  dengan pihak-pihak eksternal yang dapat mendukung dan
+                  memperkuat misi organisasi. Dengan demikian, dapat
+                  disimpulkan bahwa relasi Komandro saat ini berada pada tahap
+                  yang positif, dan organisasi terus berusaha untuk
+                  meningkatkannya melalui kolaborasi yang lebih luas dan
+                  mendalam dengan berbagai pihak.
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
 
   <!-- ///////////////////////////////////////////////////////////////////////////////////////////
@@ -654,6 +893,7 @@
   </a>
 
   <script src="/assets/js/bootstrap.bundle.min.js"></script>
+
   <script src="/script.js"></script>
 </body>
 
