--- a/Komandro/pages/about.html
+++ b/Komandro/pages/about.html
@@ -212,9 +212,9 @@
 ///////////////////////////////////////////////////////////////////////////////////////////////////-->
 
   <section id="services" class="services">
-    <div style="background-color: #e1ede1; height: 20px;">
+    <div style="background-color: #e9f2e9; height: 20px;">
     </div>
-    <div style="background-color: #e1ede1;">
+    <div style="background-color: #e9f2e9;">
       <div class="container">
         <div class="section_heading text-center">
           <h6>Our target</h6>
@@ -306,7 +306,7 @@
   </section>
 
   <section class="mb-4">
-    <div style="background-color: #e1ede1; height: 20px;">
+    <div style="background-color: #e9f2e9; height: 20px;">
     </div>
     <div class="main-content">
       <div class="header bg-gradient-primary pb-3 pt-3 pt-md-4 d-flex justify-content-center">
@@ -693,7 +693,8 @@
   <!-- /////////////////////////////////////////////////////////////////////////////////////////////////
                        START SECTION 5 - THE FAQ FAQU
 //////////////////////////////////////////////////////////////////////////////////////////////////////-->
-  <section id="faq" class="faq">
+  <section class="faq" style="background-color: #e9f2e9;">
+    <div style="background-color: #e9f2e9; height: 20px;"></div>
     <div class="container">
       <div class="row text-center">
         <h1 class="display-3 fw-bold text-uppercase">faq</h1>
@@ -851,6 +852,7 @@
         </div>
       </div>
     </div>
+    <div style="background-color: #e9f2e9; height: 30px;"></div>
   </section>
 
 
