--- a/Komandro/pages/web.html
+++ b/Komandro/pages/web.html
@@ -23,6 +23,18 @@
   <link rel="stylesheet" href="/style.css" />
   <link rel="stylesheet" href="/assets/css/style.css" />
   <link rel="stylesheet" href="/assets/css/fontawesome.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+  <style>
+    /* Add a class with the animation effect */
+    .animate-element.active {
+      animation: fadeInUp 1s;
+      opacity: 100;
+    }
+
+    .animate-element {
+      opacity: 0;
+    }
+  </style>
 </head>
 
 <body>
@@ -77,7 +89,7 @@
 
   <section id="home" class="intro-section">
     <div class="container">
-      <div class="row align-items-center text-white">
+      <div class="row align-items-center text-white animate__animated animate__backInDown animate__fast">
         <!-- START THE CONTENT FOR THE INTRO  -->
         <h1 class="fw-bold text-center display-2 lh-sm">Web Development</h1>
         <p class="fw-light text-center fs-5">pages > pendidikan > web</p>
@@ -87,10 +99,10 @@
     <img src="/images/layered-waves-haikei (1).svg" alt="wave" style="width: 100%" id="about" />
   </section>
 
-  <section class="mt-5 mb-5">
+  <section class="mt-5 mb-5 animate-element">
     <div class="container">
       <div class="row text-center mb-3">
-        <h1 class="display-4 fw-bold">Web Development</h1>
+        <h1 class="display-4 fw-bold guh">Web Development</h1>
         <div class="heading-line mb-1"></div>
       </div>
       <div class="section" id="carousel">
@@ -160,21 +172,79 @@
     </div>
   </section>
 
-  <!-- //////////////////////////////////////////////////////////////////////////////////////////////
-                         START SECTION 4 - THE SERVICES UWU
-///////////////////////////////////////////////////////////////////////////////////////////////////-->
-  <section id="services" class="services">
-    <div class="container">
-      <div class="col">
-        <div class="p-2  text-center d-flex align-items-center">
-          <h4 class="" id="vimi">
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nulla beatae ullam accusamus perferendis ex
-            impedit aut rem eaque, ab saepe aliquam facilis veritatis incidunt, quos exercitationem quisquam in cumque
-            illum.
-          </h4>
+  <section>
+    <!-- Service Start -->
+    <div class="container-xxl py-5">
+      <div class="container px-lg-5">
+        <div class="section-title position-relative text-center mb-5 pb-2 wow fadeInUp" data-wow-delay="0.1s">
+          <h6 class="position-relative d-inline text-primary ps-4">Our Services</h6>
+          <h2 class="mt-2">What Solutions We Provide</h2>
+        </div>
+        <div class="row g-4">
+          <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.1s">
+            <div class="service-item d-flex flex-column justify-content-center text-center rounded">
+              <div class="service-icon flex-shrink-0">
+                <i class="fa fa-home fa-2x"></i>
+              </div>
+              <h5 class="mb-3">SEO Optimization</h5>
+              <p>Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet lorem.</p>
+              <a class="btn px-3 mt-auto mx-auto" href="">Read More</a>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.3s">
+            <div class="service-item d-flex flex-column justify-content-center text-center rounded">
+              <div class="service-icon flex-shrink-0">
+                <i class="fa fa-home fa-2x"></i>
+              </div>
+              <h5 class="mb-3">Web Design</h5>
+              <p>Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet lorem.</p>
+              <a class="btn px-3 mt-auto mx-auto" href="">Read More</a>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.6s">
+            <div class="service-item d-flex flex-column justify-content-center text-center rounded">
+              <div class="service-icon flex-shrink-0">
+                <i class="fa fa-home fa-2x"></i>
+              </div>
+              <h5 class="mb-3">Social Media Marketing</h5>
+              <p>Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet lorem.</p>
+              <a class="btn px-3 mt-auto mx-auto" href="">Read More</a>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.1s">
+            <div class="service-item d-flex flex-column justify-content-center text-center rounded">
+              <div class="service-icon flex-shrink-0">
+                <i class="fa fa-home fa-2x"></i>
+              </div>
+              <h5 class="mb-3">Email Marketing</h5>
+              <p>Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet lorem.</p>
+              <a class="btn px-3 mt-auto mx-auto" href="">Read More</a>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.3s">
+            <div class="service-item d-flex flex-column justify-content-center text-center rounded">
+              <div class="service-icon flex-shrink-0">
+                <i class="fa fa-home fa-2x"></i>
+              </div>
+              <h5 class="mb-3">PPC Advertising</h5>
+              <p>Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet lorem.</p>
+              <a class="btn px-3 mt-auto mx-auto" href="">Read More</a>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.6s">
+            <div class="service-item d-flex flex-column justify-content-center text-center rounded">
+              <div class="service-icon flex-shrink-0">
+                <i class="fa fa-home fa-2x"></i>
+              </div>
+              <h5 class="mb-3">App Development</h5>
+              <p>Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet lorem.</p>
+              <a class="btn px-3 mt-auto mx-auto" href="">Read More</a>
+            </div>
+          </div>
         </div>
       </div>
     </div>
+    <!-- Service End -->
   </section>
 
 
@@ -227,7 +297,34 @@
   <script src="https://unpkg.com/bootstrap-material-design@4.1.1/dist/js/bootstrap-material-design.js"
     integrity="sha384-CauSuKpEqAFajSpkdjv3z9t8E7RlpJ1UP0lKM/+NdtSarroVKu069AlsRPKkFBz9"
     crossorigin="anonymous"></script>
+  <script>
+    // Function to check if an element is in the viewport
+    function isElementInViewport(el) {
+      const rect = el.getBoundingClientRect();
+      return (
+        rect.top >= 0 &&
+        rect.left >= 0 &&
+        rect.bottom <= (window.innerHeight || document.documentElement.clientHeight) &&
+        rect.right <= (window.innerWidth || document.documentElement.clientWidth)
+      );
+    }
 
+    // Function to handle scroll events
+    function handleScroll() {
+      const guh = document.querySelector('.guh')
+      const element = document.querySelector('.animate-element');
+
+      if (isElementInViewport(guh)) {
+        element.classList.add('active');
+      }
+    }
+
+    // Attach the handleScroll function to the scroll event
+    window.addEventListener('scroll', handleScroll);
+
+    // Initial check on page load
+    handleScroll();
+  </script>
 
 </body>
 
