--- a/Komandro/pages/about.html
+++ b/Komandro/pages/about.html
@@ -111,7 +111,10 @@
               Invidunt lorem justo sanctus clita. Erat lorem labore ea, justo
               dolor lorem ipsum ut sed eos, ipsum et dolor kasd sit ea justo.
               Erat justo sed sed diam. Ea et erat ut sed diam sea ipsum est
-              dolor
+              dolor Lorem ipsum dolor sit amet consectetur, adipisicing elit. A, cum?Lorem ipsum dolor sit amet
+              consectetur, adipisicing elit. Minus, aliquid! Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+              Quisquam odit sit officia facilis tempore sequi laudantium optio saepe molestias rem itaque quae corrupti
+              hic placeat tenetur, quia pariatur. Qui, itaque.
             </p </div>
           </div>
         </div>
