--- a/Komandro/pages/web.html
+++ b/Komandro/pages/web.html
@@ -34,6 +34,22 @@
     .animate-element {
       opacity: 0;
     }
+
+    .cardguhtarget {
+      opacity: 0;
+    }
+
+    .cardguhtarget.animate__animated {
+      opacity: 100;
+    }
+
+    .texttargetplace {
+      opacity: 0;
+    }
+
+    .texttargetplace.animate__animated {
+      opacity: 100;
+    }
   </style>
 </head>
 
@@ -157,14 +173,25 @@
                     <i class="material-icons">keyboard_arrow_left</i>
                     <span class="sr-only">Previous</span>
                   </a>
-                  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                  <a class="carousel-control-next texttarget" href="#carouselExampleIndicators" role="button"
+                    data-slide="next">
                     <i class="material-icons">keyboard_arrow_right</i>
                     <span class="sr-only">Next</span>
                   </a>
                 </div>
               </div>
               <!-- End Carousel Card -->
-
+              <div class="text-center texttargetplace animate__delay-1s">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem atque nihil
+                  fugit
+                  voluptatem cupiditate
+                  fuga tenetur impedit, tempore asperiores laboriosam aut reiciendis iure, nisi, explicabo vel in
+                  sapiente
+                  id totam?Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus illo, aliquam obcaecati
+                  error reprehenderit, totam tenetur at aperiam facilis nisi eos, adipisci iusto veritatis modi autem
+                  nobis consequatur harum nostrum quia debitis laboriosam libero quis eaque! Voluptates ipsa recusandae
+                  exercitationem!</p>
+              </div>
             </div>
           </div>
         </div>
@@ -174,71 +201,81 @@
 
   <section>
     <!-- Service Start -->
-    <div class="container-xxl py-5">
+    <div class=" container-xxl py-5">
       <div class="container px-lg-5">
         <div class="section-title position-relative text-center mb-5 pb-2 wow fadeInUp" data-wow-delay="0.1s">
-          <h6 class="position-relative d-inline text-primary ps-4">Our Services</h6>
-          <h2 class="mt-2">What Solutions We Provide</h2>
+          <div class="section_heading text-center">
+            <h6>Teaching subject</h6>
+            <h3>Materi dari kelas Web</h3>
+            <div class="line"></div>
+            <div class="heading-line mb-1"></div>
+          </div>
         </div>
-        <div class="row g-4">
-          <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.1s">
+        <div class="row g-4 cardguh">
+          <div class="col-lg-4 col-md-6 wow zoomIn cardguhtarget" data-wow-delay="0.1s">
             <div class="service-item d-flex flex-column justify-content-center text-center rounded">
               <div class="service-icon flex-shrink-0">
-                <i class="fa fa-home fa-2x"></i>
+                <i class="fa fa-home fa-2x cardguhtargetdt"></i>
               </div>
               <h5 class="mb-3">SEO Optimization</h5>
-              <p>Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet lorem.</p>
-              <a class="btn px-3 mt-auto mx-auto" href="">Read More</a>
+              <p>Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet
+                lorem.</p>
+
             </div>
           </div>
-          <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.3s">
+          <div class="col-lg-4 col-md-6 wow zoomIn cardguhtarget animate__delay-1s" data-wow-delay="0.3s">
             <div class="service-item d-flex flex-column justify-content-center text-center rounded">
               <div class="service-icon flex-shrink-0">
                 <i class="fa fa-home fa-2x"></i>
               </div>
               <h5 class="mb-3">Web Design</h5>
-              <p>Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet lorem.</p>
-              <a class="btn px-3 mt-auto mx-auto" href="">Read More</a>
+              <p>Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet
+                lorem.</p>
+
             </div>
           </div>
-          <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.6s">
+          <div class="col-lg-4 col-md-6 wow zoomIn cardguhtarget animate__delay-2s" data-wow-delay="0.6s">
             <div class="service-item d-flex flex-column justify-content-center text-center rounded">
               <div class="service-icon flex-shrink-0">
                 <i class="fa fa-home fa-2x"></i>
               </div>
               <h5 class="mb-3">Social Media Marketing</h5>
-              <p>Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet lorem.</p>
-              <a class="btn px-3 mt-auto mx-auto" href="">Read More</a>
+              <p>Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet
+                lorem.</p>
+
             </div>
           </div>
-          <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.1s">
+          <div class="col-lg-4 col-md-6 wow zoomIn cardguhtarget animate__delay-3s" data-wow-delay="0.1s">
             <div class="service-item d-flex flex-column justify-content-center text-center rounded">
               <div class="service-icon flex-shrink-0">
                 <i class="fa fa-home fa-2x"></i>
               </div>
               <h5 class="mb-3">Email Marketing</h5>
-              <p>Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet lorem.</p>
-              <a class="btn px-3 mt-auto mx-auto" href="">Read More</a>
+              <p>Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet
+                lorem.</p>
+
             </div>
           </div>
-          <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.3s">
+          <div class="col-lg-4 col-md-6 wow zoomIn cardguhtarget animate__delay-4s" data-wow-delay="0.3s">
             <div class="service-item d-flex flex-column justify-content-center text-center rounded">
               <div class="service-icon flex-shrink-0">
                 <i class="fa fa-home fa-2x"></i>
               </div>
               <h5 class="mb-3">PPC Advertising</h5>
-              <p>Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet lorem.</p>
-              <a class="btn px-3 mt-auto mx-auto" href="">Read More</a>
+              <p>Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet
+                lorem.</p>
+
             </div>
           </div>
-          <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.6s">
+          <div class="col-lg-4 col-md-6 wow zoomIn cardguhtarget animate__delay-5s" data-wow-delay="0.6s">
             <div class="service-item d-flex flex-column justify-content-center text-center rounded">
               <div class="service-icon flex-shrink-0">
                 <i class="fa fa-home fa-2x"></i>
               </div>
               <h5 class="mb-3">App Development</h5>
-              <p>Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet lorem.</p>
-              <a class="btn px-3 mt-auto mx-auto" href="">Read More</a>
+              <p>Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet
+                lorem.</p>
+
             </div>
           </div>
         </div>
@@ -313,9 +350,25 @@
     function handleScroll() {
       const guh = document.querySelector('.guh')
       const element = document.querySelector('.animate-element');
+      const meh = document.querySelectorAll('.cardguhtarget');
+      const duh = document.querySelector('.cardguhtarget');
+      const yep = document.querySelector('.cardguhtargetdt');
+      const oi = document.querySelector('.texttarget');
+      const hi = document.querySelector('.texttargetplace')
 
       if (isElementInViewport(guh)) {
         element.classList.add('active');
+      }
+
+      if (isElementInViewport(yep)) {
+        meh.forEach(duh => {
+          duh.classList.add('animate__animated', 'animate__fadeInLeft');
+        });
+
+      }
+
+      if (isElementInViewport(oi)) {
+        hi.classList.add('animate__animated', 'animate__fadeInUp');
       }
     }
 
