--- a/Komandro/pages/web.html
+++ b/Komandro/pages/web.html
@@ -181,7 +181,7 @@
                 </div>
               </div>
               <!-- End Carousel Card -->
-              <div class="text-center texttargetplace animate__delay-1s">
+              <div class="text-center texttargetplace">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem atque nihil
                   fugit
                   voluptatem cupiditate
