--- a/Komandro/pages/about.html
+++ b/Komandro/pages/about.html
@@ -339,15 +339,16 @@
                 <div class="card card-stats mb-4 mb-xl-0">
                   <div class="card-body">
                     <div class="position-absolute caosprsn"><img src="/images/stcrprsn1.png" alt=""></div>
+                    <div class="position-absolute caosright"><img src="/images/Aboutus1.png" alt=""></div>
                     <div class="row">
                       <div class="col">
                         <h5 class="card-title text-uppercase text-muted mb-0">Alumni</h5>
                         <span class="h2 font-weight-bold mb-0">350,897</span>
                       </div>
                       <div class="col-auto">
-                        <div class="icon icon-shape bg-danger text-white rounded-circle shadow">
+                        <!-- <div class="icon icon-shape bg-danger text-white rounded-circle shadow">
                           <i class="fas fa-users"></i>
-                        </div>
+                        </div> -->
                       </div>
                     </div>
                     <p class="mt-3 mb-0 text-muted text-sm">
@@ -365,9 +366,9 @@
                         <span class="h2 font-weight-bold mb-0">2,356</span>
                       </div>
                       <div class="col-auto">
-                        <div class="icon icon-shape bg-warning text-white rounded-circle shadow">
+                        <!-- <div class="icon icon-shape bg-warning text-white rounded-circle shadow">
                           <i class="fas fa-users"></i>
-                        </div>
+                        </div> -->
                       </div>
                     </div>
                     <p class="mt-3 mb-0 text-muted text-sm">
