--- a/Komandro/index.html
+++ b/Komandro/index.html
@@ -230,7 +230,7 @@
               belajar tentang desain visual, prototyping, dan pengujian
               pengguna.
             </p>
-            <a href="#sosmed" style="text-decoration: none">
+            <a href="pages/uiux.html" style="text-decoration: none">
               <button type="button" class="rounded-pill btn-rounded border-primary">
                 Learn more
                 <span><i class="fas fa-arrow-right"></i></span>
@@ -261,7 +261,7 @@
               tentang teknologi web terkini, desain responsif, dan pengelolaan
               database.
             </p>
-            <a href="#sosmed" style="text-decoration: none">
+            <a href="pages/web.html" style="text-decoration: none">
               <button type="button" class="rounded-pill btn-rounded border-primary">
                 Learn more
                 <span><i class="fas fa-arrow-right"></i></span>
@@ -282,7 +282,7 @@
               kinerja, dan integrasi fitur canggih dalam aplikasi terutama di
               bagian front-end.
             </p>
-            <a href="#sosmed" style="text-decoration: none">
+            <a href="pages/android.html" style="text-decoration: none">
               <button type="button" class="rounded-pill btn-rounded border-primary">
                 Learn more
                 <span><i class="fas fa-arrow-right"></i></span>
@@ -313,7 +313,7 @@
               Mereka akan mendapatkan pemahaman tentang sensor,
               mikrokontroler, dan aplikasi IoT yang beragam.
             </p>
-            <a href="#sosmed" style="text-decoration: none">
+            <a href="pages/iot.html" style="text-decoration: none">
               <button type="button" class="rounded-pill btn-rounded border-primary">
                 Learn more
                 <span><i class="fas fa-arrow-right"></i></span>
