--- a/Komandro/pages/about.html
+++ b/Komandro/pages/about.html
@@ -308,8 +308,8 @@
       <!-- Facilities Start -->
   </section>
 
-  <section class="mb-4">
-    <div style="background-color: #e9f2e9; height: 20px;">
+  <section class="mb-4 mt-4">
+    <!-- <div style="background-color: #e9f2e9; height: 20px;"> -->
     </div>
     <div class="main-content">
       <div class="header bg-gradient-primary pb-3 pt-3 pt-md-4 d-flex justify-content-center">
@@ -383,7 +383,7 @@
       </div>
   </section>
 
-  <section>
+  <section class="mt-5">
     <section class="timeline_area section_padding_130 mb-5">
       <div class="container">
         <div class="row justify-content-center mb-4">
@@ -697,7 +697,7 @@
   <!-- /////////////////////////////////////////////////////////////////////////////////////////////////
                        START SECTION 5 - THE FAQ FAQU
 //////////////////////////////////////////////////////////////////////////////////////////////////////-->
-  <section class="faq" style="background-color: #e9f2e9;">
+  <section class="faq" style="background-color: #e9f2e9; padding-bottom: 3em;">
     <div style="background-color: #e9f2e9; height: 20px;"></div>
     <div class="container">
       <div class="row text-center">
