--- a/pages/web.html
+++ b/pages/web.html
@@ -7,22 +7,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Komandro : Web Dev</title>
   <link rel="apple-touch-icon" sizes="180x180" href="/ioc/apple-touch-icon.png" />
-  <link rel="icon" type="image/png" sizes="32x32" href="/ioc/favicon-32x32.png" />
-  <link rel="icon" type="image/png" sizes="16x16" href="/ioc/favicon-16x16.png" />
+  <link rel="icon" type="../image/png" sizes="32x32" href="/ioc/favicon-32x32.png" />
+  <link rel="icon" type="../image/png" sizes="16x16" href="/ioc/favicon-16x16.png" />
   <!-- <link rel="stylesheet"
     href="https://unpkg.com/bootstrap-material-design@4.1.1/dist/css/bootstrap-material-design.min.css"
     integrity="sha384-wXznGJNEXNG1NFsbm0ugrLFMQPWswR3lds2VeinahP8N0zJw9VWSopbjv2x7WCvX" crossorigin="anonymous"> -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/glightbox/dist/css/glightbox.min.css" />
 
-  <link rel="manifest" href="/ioc/site.webmanifest" />
+  <link rel="manifest" href="../ioc/site.webmanifest" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap"
     rel="stylesheet" />
-  <link rel="stylesheet" href="/assets/css/stylekeals.css">
+  <link rel="stylesheet" href="../assets/css/stylekeals.css">
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="/style.css" />
-  <link rel="stylesheet" href="/assets/css/style.css" />
-  <link rel="stylesheet" href="/assets/css/fontawesome.css" />
+  <link rel="stylesheet" href="../style.css" />
+  <link rel="stylesheet" href="../assets/css/style.css" />
+  <link rel="stylesheet" href="../assets/css/fontawesome.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
   <style>
     /* Add a class with the animation effect */
@@ -112,7 +112,7 @@
       </div>
     </div>
     <!--<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" id="parallax-svg"><path fill="#f3fcf3" fill-opacity="1" d="M0,160L48,176C96,192,192,224,288,208C384,192,480,128,576,133.3C672,139,768,213,864,202.7C960,192,1056,96,1152,74.7C1248,53,1344,107,1392,133.3L1440,160L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>-->
-    <img src="/images/layered-waves-haikei (1).svg" alt="wave" style="width: 100%" id="about" />
+    <img src="../images/layered-waves-haikei (1).svg" alt="wave" style="width: 100%" id="about" />
   </section>
 
   <section class="mt-5 mb-5 animate-element">
@@ -315,8 +315,8 @@
     <i class="fas fa-chevron-up"></i>
   </a>
 
-  <script src="/assets/js/bootstrap.bundle.min.js"></script>
-  <script src="/script.js"></script>
+  <script src="../assets/js/bootstrap.bundle.min.js"></script>
+  <script src="../script.js"></script>
 
 
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
