--- a/pages/web.html
+++ b/pages/web.html
@@ -6,9 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Komandro : Web Dev</title>
-  <link rel="apple-touch-icon" sizes="180x180" href="/ioc/apple-touch-icon.png" />
-  <link rel="icon" type="../image/png" sizes="32x32" href="/ioc/favicon-32x32.png" />
-  <link rel="icon" type="../image/png" sizes="16x16" href="/ioc/favicon-16x16.png" />
+  <link rel="apple-touch-icon" sizes="180x180" href="../ioc/apple-touch-icon.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="../ioc/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="../ioc/favicon-16x16.png" />
   <!-- <link rel="stylesheet"
     href="https://unpkg.com/bootstrap-material-design@4.1.1/dist/css/bootstrap-material-design.min.css"
     integrity="sha384-wXznGJNEXNG1NFsbm0ugrLFMQPWswR3lds2VeinahP8N0zJw9VWSopbjv2x7WCvX" crossorigin="anonymous"> -->
