--- a/pages/about.html
+++ b/pages/about.html
@@ -6,8 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Komandro : About us</title>
-  <link rel="stylesheet" href="/assets/css/style.css" />
-  <link rel="stylesheet" href="/assets/css/fontawesome.css" />
+  <link rel="stylesheet" href="../assets/css/style.css" />
+  <link rel="stylesheet" href="../assets/css/fontawesome.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/glightbox/dist/css/glightbox.min.css" />
   <script src="https://cdn.jsdelivr.net/gh/mcstudios/glightbox/dist/js/glightbox.min.js"></script>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap"
@@ -15,12 +15,12 @@
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" href="/style.css" />
-  <link rel="apple-touch-icon" sizes="180x180" href="/ioc/apple-touch-icon.png" />
-  <link rel="icon" type="image/png" sizes="32x32" href="/ioc/favicon-32x32.png" />
-  <link rel="icon" type="image/png" sizes="16x16" href="/ioc/favicon-16x16.png" />
-  <link rel="manifest" href="/ioc/site.webmanifest" />
-  <link href="/assets/css/styleabout.css" rel="stylesheet" />
+  <link rel="stylesheet" href="../style.css" />
+  <link rel="apple-touch-icon" sizes="180x180" href="../ioc/apple-touch-icon.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="../ioc/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="../ioc/favicon-16x16.png" />
+  <link rel="manifest" href="../ioc/site.webmanifest" />
+  <link href="../assets/css/styleabout.css" rel="stylesheet" />
 
 </head>
 
@@ -35,7 +35,7 @@
       <a class="navbar-brand" href="#">
         <!--
             <img
-            src="images/LogoKomandro.png"
+            src="../images/LogoKomandro.png"
             alt="logo image"
             style="height: 70px"
           />
@@ -58,10 +58,10 @@
             <a class="nav-link dropbtn" href="#">Kelas
               <i class="fas fa-regular fa-caret-down" style="color: #51d259"></i></a>
             <div class="dropdown-content">
-              <a href="/pages/web.html">Web Dev</a>
-              <a href="/pages/android.html">Android Dev</a>
-              <a href="/pages/iot.html">IoT</a>
-              <a href="/pages/uiux.html">UI/UX</a>
+              <a href="../pages/web.html">Web Dev</a>
+              <a href="../pages/android.html">Android Dev</a>
+              <a href="../pages/iot.html">IoT</a>
+              <a href="../pages/uiux.html">UI/UX</a>
             </div>
           </li>
           <li class="nav-item">
@@ -86,7 +86,7 @@
       </div>
     </div>
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" id="parallax-svg"><path fill="#f3fcf3" fill-opacity="1" d="M0,160L48,176C96,192,192,224,288,208C384,192,480,128,576,133.3C672,139,768,213,864,202.7C960,192,1056,96,1152,74.7C1248,53,1344,107,1392,133.3L1440,160L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
-    <img src="/images/layered-waves-haikei (1).svg" alt="wave" style="width: 100%" id="about" />
+    <img src="../images/layered-waves-haikei (1).svg" alt="wave" style="width: 100%" id="about" />
     
 
 
@@ -338,8 +338,8 @@
               <div class="col-xl-3 col-lg-6">
                 <div class="card card-stats mb-4 mb-xl-0">
                   <div class="card-body">
-                    <div class="position-absolute caosprsn"><img src="/images/stcrprsn1.png" alt=""></div>
-                    <div class="position-absolute caosright"><img src="/images/Aboutus1.png" alt=""></div>
+                    <div class="position-absolute caosprsn"><img src="../images/stcrprsn1.png" alt=""></div>
+                    <div class="position-absolute caosright"><img src="../images/Aboutus1.png" alt=""></div>
                     <div class="row d-flex justify-content-center flex-column align-items-center">
                       <div class="col d-flex justify-content-center flex-column align-items-center">
                         <h5 class="card-title text-uppercase text-muted mb-0">Alumni</h5>
@@ -891,9 +891,9 @@
     <i class="fas fa-chevron-up"></i>
   </a>
 
-  <script src="/assets/js/bootstrap.bundle.min.js"></script>
+  <script src="../assets/js/bootstrap.bundle.min.js"></script>
 
-  <script src="/script.js"></script>
+  <script src="../script.js"></script>
 </body>
 
 </html>
